[metadata]
name = dmlab
version = 0.0.1
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = Common utilities used by Dream Mining Lab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/dmlab
project_urls =
    Bug Tracker = https://github.com/remrama/dmlab/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = dmlab
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dmlab